vlib/v/checker/tests/multi_const_field_name_duplicate_err.out
vlib/v/checker/tests/multi_const_field_name_duplicate_err.vv:2:8: error: duplicate const `aaa`
    1 | const (aaa = 1)
    2 | const (aaa = 2)
      |        ~~~
    3 | fn main() {
    4 |     println(aaa)
